--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href = "https://github.com/yukachilov" target="_blank">GitHub</a></li>
     </ul>
    </header>
+   aaa
    <div class = "banner-wrapper-fixed">
      <div class = "foreground">
      </div>
