--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <li><a href = "https://github.com/yukachilov" target="_blank">GitHub</a></li>
     </ul>
    </header>
-   aaa
    <div class = "banner-wrapper-fixed">
      <div class = "foreground">
      </div>
@@ -42,14 +41,23 @@
       <div class = "section">
         <div class = "L-four T-six S-tewelve">
           <div class = "box">
+            <div class = "smallbox">
+
+            </div>
           </div>
         </div>
         <div class = "L-four T-six S-tewelve">
           <div class = "box">
+            <div class = "smallbox">
+              
+            </div>
           </div>
         </div>
         <div class = "L-four T-tewelve S-tewelve">
           <div class = "box">
+            <div class = "smallbox">
+              
+            </div>
           </div>
         </div>
       </div>
