--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
       <span class = "toggle-btn">&#9776;</span>
     </div>
     <ul class = "display-none-mobile">
-      <li><a href = "">Home</a></li>
+      <li><a href = "index.html">Home</a></li>
       <li><a href = "profile.html">Profile</a></li>
       <li><a href = "https://twitter.com/yukachilov" target="_blank">Twetter</a></li>
       <li><a href = "https://github.com/yukachilov" target="_blank">GitHub</a></li>
