--- a/profile.html
+++ b/profile.html
@@ -33,14 +33,11 @@
   <div class = "L-tewelve">
     <div class = "row">
       <div class = "section">
-      </div> 
-    </div>  
-  </div>
-  <div class = "L-tewelve">
-    <div class = "row">
-      <div class = "section">
         <div class = "L-four T-tewelve S-tewelve">
           <div class = "mainbox">
+            <div class = "smallbox">
+              
+            </div>
           </div>
         </div>
       </div>
