--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
         <div class = "L-four T-six S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-
+              <img src="">
             </div>
           </div>
         </div>
         <div class = "L-four T-six S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-              
+              <img src="">
             </div>
           </div>
         </div>
         <div class = "L-four T-tewelve S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-              
+              <img src="">
             </div>
           </div>
         </div>
