簡単に自己紹介

--- a/index.html
+++ b/index.html
@@ -42,21 +42,38 @@
         <div class = "L-four T-six S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-              <img src="">
+              <img src="/Users/abebemhmh/Desktop/ポートフォリオ/logaster_No_1_small_size_108x73_pixels_(PNG)/mymap.png" class = "gyazo">
+            </div>
+            <div class = maincontents>
+              Swiftの学習の際にyoutubeやネットの情報を頼りに作成したiPhoneのマップアプリです。<br>
+              delegateについての学習をメインに作成しました。<br>
+              マップの切り替えは標準の地図から航空写真→３D写真→交通機関と右下のボタンで変更可能です。<br>
+              ※練習で作成したものなのでAppStore等にはあげていません。
             </div>
           </div>
         </div>
         <div class = "L-four T-six S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-              <img src="">
+              <img src="/Users/abebemhmh/Desktop/ポートフォリオ/logaster_No_1_small_size_108x73_pixels_(PNG)/furima.jpg">
+            </div>
+            <div class = maincontents>
+              スクールで作成した成果物です。<br>
+              担当した箇所はカテゴリー機能、パンくず機能、新規登録機能がメインで、その他出品機能、編集機能等は一部携わりました。主にエラー解決など。<br>
+              チームではスクラムマスターをさせていただき、非常に勉強になりました。
             </div>
           </div>
         </div>
         <div class = "L-four T-tewelve S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-              <img src="">
+              <img src="/Users/abebemhmh/Desktop/ポートフォリオ/logaster_No_1_small_size_108x73_pixels_(PNG)/portfolio.jpg">
+            </div>
+            <div class = maincontents>
+              当サイトです。成果物が増え次第随時更新していきます。<br>
+              使用言語はHTML,CSS,javascriptです。<br>
+              <a href = "https://github.com/yukachilov/portfolio" class = "link">source</a>
+              <a href = "https://github.com/yukachilov/portfolio" class = "link">page</a>
             </div>
           </div>
         </div>
