--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,10 @@
             
           </div>
           <div class = maincontents>
-              .Comです。
+              .Comです。<br>
+              とにかくゲームが好きで、自分でももっと面白いものが作れるのではないかと考え前職の安定を捨てエンジニアを目指すことを決意、2020年1月からTECH::CAMP難波校にて本格的にプログラミング学習を開始、3月に無事卒業。<br>
+              スクールではHTML,CSS,Ruby/Ruby on Rails,javascript/jQueryとAWS,MySQL,git/gitHub,OS/Linux等、一通り学習しました。<br>
+              現在はSwiftに惹かれて独学でアプリ作成をしており、Swiftエンジニアを目指して日々勉強しています。
           </div>
         </div>
       </div>
