--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class = "L-four T-six S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-              <img src="/Users/abebemhmh/Desktop/ポートフォリオ/logaster_No_1_small_size_108x73_pixels_(PNG)/mymap.png" class = "gyazo">
+              <img src="logaster_No_1_small_size_108x73_pixels_(PNG)/mymap.png" class = "gyazo">
             </div>
             <div class = maincontents>
               Swiftの学習の際にyoutubeやネットの情報を頼りに作成したiPhoneのマップアプリです。<br>
@@ -55,7 +55,7 @@
         <div class = "L-four T-six S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-              <img src="/Users/abebemhmh/Desktop/ポートフォリオ/logaster_No_1_small_size_108x73_pixels_(PNG)/furima.jpg">
+              <img src="logaster_No_1_small_size_108x73_pixels_(PNG)/furima.jpg">
             </div>
             <div class = maincontents>
               スクールで作成した成果物です。<br>
@@ -67,7 +67,7 @@
         <div class = "L-four T-tewelve S-tewelve">
           <div class = "box">
             <div class = "smallbox">
-              <img src="/Users/abebemhmh/Desktop/ポートフォリオ/logaster_No_1_small_size_108x73_pixels_(PNG)/portfolio.jpg">
+              <img src="logaster_No_1_small_size_108x73_pixels_(PNG)/portfolio.jpg">
             </div>
             <div class = maincontents>
               当サイトです。成果物が増え次第随時更新していきます。<br>
