--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
         <div class = "L-four T-tewelve S-tewelve">
           <div class = "mainbox">
             <div class = "smallbox">
-              <img src="/Users/abebemhmh/Desktop/ポートフォリオ/logaster_No_1_small_size_108x73_pixels_(PNG)/63E36FC3-46E8-458D-8507-007875FBCAC5_1_105_c.jpeg" class = profile>
+              <img src="logaster_No_1_small_size_108x73_pixels_(PNG)/63E36FC3-46E8-458D-8507-007875FBCAC5_1_105_c.jpeg" class = profile>
             </div>
             
           </div>
