--- a/profile.html
+++ b/profile.html
@@ -47,6 +47,13 @@
               現在はSwiftに惹かれて独学でアプリ作成をしており、Swiftエンジニアを目指して日々勉強しています。
           </div>
         </div>
+        <!-- <div class = "L-four T-six S-tewelve">
+          <div class = "box">
+            <div class = maincontents>
+              
+            </div>
+          </div>
+        </div> -->
       </div>
       
     </div>
