--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
               Swiftの学習の際にyoutubeやネットの情報を頼りに作成したiPhoneのマップアプリです。<br>
               delegateについての学習をメインに作成しました。<br>
               マップの切り替えは標準の地図から航空写真→３D写真→交通機関と右下のボタンで変更可能です。<br>
-              ※練習で作成したものなのでAppStore等にはあげていません。
+              使用言語 Swift/xcode<br>
+              ※練習で作成したものなのでAppStore等にはあげていません。<br>
+              <a href = "https://github.com/yukachilov/MapApp" class = "link" target="_blank">source</a>
             </div>
           </div>
         </div>
@@ -54,7 +56,10 @@
             <div class = maincontents>
               スクールで作成した成果物です。<br>
               担当した箇所はカテゴリー機能、パンくず機能、新規登録機能がメインで、その他出品機能、編集機能等は一部携わりました。主にエラー解決など。<br>
-              チームではスクラムマスターをさせていただき、非常に勉強になりました。
+              チームではスクラムマスターをさせていただき、非常に勉強になりました。<br>
+              使用言語 HTML,CSS,Javascript/jQuery,Ruby/Ruby on Rails<br>
+              <a href = "https://github.com/yukachilov/furima-sumple-70a" class = "link" target="_blank">source</a>
+              <a href = "http://18.177.248.171/" class = "link"  target="_blank">page</a>
             </div>
           </div>
         </div>
@@ -65,9 +70,9 @@
             </div>
             <div class = maincontents>
               当サイトです。成果物が増え次第随時更新していきます。<br>
-              使用言語はHTML,CSS,javascriptです。<br>
-              <a href = "https://github.com/yukachilov/portfolio" class = "link">source</a>
-              <a href = "https://github.com/yukachilov/portfolio" class = "link">page</a>
+              使用言語 HTML,CSS,javascript<br>
+              <a href = "https://github.com/yukachilov/portfolio" class = "link"       target="_blank">source</a>
+              <a href = "https://festive-nobel-4cda4a.netlify.com/" class = "link"  target="_blank">page</a>
             </div>
           </div>
         </div>
